# aws-lambda-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  maxday
.github/workflows/: check-compiles.yml  check-format.yml  code-quality.yml  workflow.yml
ci/: README.md  codebuild.yml  update-images.sh
ci/codebuild/: alpine-3.15.yml  alpine-3.19.yml  amazonlinux-2.yml  amazonlinux-2017.03.yml  amazonlinux-2018.03.yml  amazonlinux-2023.yml  arch-linux.yml  build-cpp-sdk.sh  build.sh  format-check.sh  lambda.patch  run-tests.sh  ubuntu-18.04.yml  ubuntu-22.04.yml
ci/docker/: alpine-linux-3.15  alpine-linux-3.19  amazon-linux-2  amazon-linux-2017.03  amazon-linux-2018.03  arch-linux  uberbase.Dockerfile  ubuntu-linux-18.04  ubuntu-linux-22.04
cmake/: AwsLambdaPackaging.cmake  aws-lambda-runtime-config.cmake
examples/: Dockerfile  README.md  main.cpp
examples/api-gateway/: README.md  main.cpp  run.sh
examples/demo/: CMakeLists.txt  main.cpp
examples/dynamodb/: README.md  main.cpp
examples/monte-carlo-calculator/: CMakeLists.txt  README.md  main.cpp  trust-policy.json
examples/s3/: README.md  main.cpp
include/: backward.h
include/aws/http/: response.h
include/aws/lambda-runtime/: logging.h  outcome.h  runtime.h
include/aws/logging/: logging.h
packaging/: packager
src/: backward.cpp  backward.h  logging.cpp  runtime.cpp  version.cpp.in
tests/: CMakeLists.txt  lambda_function.cpp  main.cpp  no_op_test.cpp  runtime_tests.cpp  version_tests.cpp
tests/gtest/: gtest.h
tests/integration/: main.cpp  runtime_tests.cpp  version_tests.cpp
tests/resources/: CMakeLists.txt  lambda_function.cpp
